vyre-macros/tests/ui/bad_pass_duplicate_argument.stderr
error: duplicate macro argument `phase`. Fix: keep exactly one `phase` entry.
 --> tests/ui/bad_pass_duplicate_argument.rs:8:5
  |
8 |     phase = "cleanup"
  |     ^^^^^
